--- a/lucky-my/res/xml/voice_trigger.xml
+++ b/lucky-my/res/xml/voice_trigger.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <trigger keyword="@string/voice_command" >
-	<input prompt="@string/glass_voice_prompt"></input>
+	<!-- <input prompt="@string/glass_voice_prompt"></input> -->
 </trigger>
