--- a/htigran/res/xml/voice_trigger.xml
+++ b/htigran/res/xml/voice_trigger.xml
@@ -1,6 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<trigger keyword="@string/voice_command" >
-    <constraints
-        camera="true" />
-	<input prompt="@string/glass_voice_prompt"></input>
-</trigger>
+<trigger keyword="@string/voice_command" />
