--- a/TumoGame/res/layout/game_over.xml
+++ b/TumoGame/res/layout/game_over.xml
@@ -19,36 +19,18 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal" >
 
-        <ImageView
-            android:id="@+id/livecard_image"
-            android:layout_width="0dip"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="5dp" />
-
         <TextView
-            android:id="@+id/livecard_content_1"
+            android:id="@+id/game_over_content"
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="1"
             android:gravity="center"
             android:keepScreenOn="true"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/livecard_content_2"
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:keepScreenOn="true"
-            android:textSize="25sp"
+            android:textSize="50sp"
             android:textStyle="bold" />
     </LinearLayout>
 
